--- a/app/.env.sample
+++ b/app/.env.sample
@@ -13,8 +13,8 @@ DB_USERNAME=
 DB_PASSWORD=
 DB_NAME=fastapi
 
-DEFAULT_PASSWORD=12345678
-JWT_SECRET=pU6zT4dLzF8vB2r9K8fX3mE7nQ9vY5cR
+DEFAULT_PASSWORD=
+JWT_SECRET=
 JWT_ALGORITHM=HS256
 
 COGNITO_ENABLED=false
